force-app/main/default/objects/Firm_Team_Roles__c/Firm_Team_Roles__c.object-meta.xml
<CustomObject>
    <label>Firm Team Role</label>
    <nameField>
        <displayFormat>FTR- {0000}</displayFormat>
        <label>Firm Team Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Firm Team Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>