force-app/main/default/objects/Firm_Team_Roles__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Role__c</field>
            <operation>equals</operation>
            <value>Handler</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Firm Team Roles</relationshipLabel>
    <relationshipName>Firm_Team_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>