force-app/main/default/objects/Firm_Team_Roles__c/fields/Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Firm_Team__c</fullName>
    <label>Firm Team</label>
    <referenceTo>Firm_Team__c</referenceTo>
    <relationshipLabel>Firm Team Roles</relationshipLabel>
    <relationshipName>Firm_Team_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>