force-app/main/default/objects/Firm_Team_Roles__c/fields/Firm_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Team_Name__c</fullName>
    <formula>Firm_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Team Name</label>
    <type>Text</type>
</CustomField>