force-app/main/default/objects/Firm_Team_Roles__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Handler</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
                <isActive>false</isActive>
                <label>Supervisor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>