force-app/main/default/objects/Firm_Team_Roles__c/validationRules/Cant_have_removed_Contact_in_a_team.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_have_removed_Contact_in_a_team</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Contact__r.Status__c) =&apos;Removed&apos;</errorConditionFormula>
    <errorMessage>Cant have &apos;removed&apos; Contact in a team</errorMessage>
</ValidationRule>