force-app/main/default/objects/Firm_Team_Roles__c/validationRules/Contact_Must_belong_to_Firm_of_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Must_belong_to_Firm_of_Team</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.AccountId !=  Firm_Team__r.Firm__c</errorConditionFormula>
    <errorMessage>Contact must belong to the same Firm as the Firm of the team</errorMessage>
</ValidationRule>