force-app/main/default/objects/Firm_Team_Roles__c/validationRules/Contact_type_and_Team_member_match.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_type_and_Team_member_match</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Roles__c) = &apos;Case Handler&apos;, TEXT(Contact__r.Role__c) != &apos;Handler&apos;)</errorConditionFormula>
    <errorMessage>A team handler must have a contact Handler role type</errorMessage>
</ValidationRule>